<resources>
    <string name="app_name">Alpha</string>
    <string name="app_version" translatable="false">v 0.1</string>
    <string name="ithb" translatable="false">INSTITUT TEKNIK HARAPAN BANGSA</string>
    <string name="ok" translatable="false">OK</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="lihat" translatable="false">Lihat</string>
    <string name="kembali_ke_login" translatable="false">Kembali ke Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="lupa_password" translatable="false">Lupa password?</string>
    <string name="belum_punya_akun" translatable="false">Belum punya akun?</string>
    <string name="registrasi" translatable="false">Registrasi</string>
    <string name="nama_lengkap" translatable="false">Nama lengkap (*)</string>
    <string name="nomor_hp" translatable="false">Nomor HP (*)</string>
    <string name="kampus_impian" translatable="false">Kampus impian</string>
    <string name="prodi_impian" translatable="false">Prodi impian</string>
    <string name="sekolah" translatable="false">Sekolah</string>
    <string name="kelas" translatable="false">Kelas</string>
    <string name="konfirmasi_password" translatable="false">Konfirmasi password</string>
    <string name="reset_password" translatable="false">RESET PASSWORD</string>
    <string name="masukkan_email_anda" translatable="false">Masukkan email Anda dan kami akan mengirimkan link untuk reset password Anda</string>
    <string name="password_baru" translatable="false">PASSWORD BARU</string>
    <string name="masukkan_password_baru" translatable="false">Masukkan password baru Anda</string>
    <string name="password_baru_ast" translatable="false">Password baru (*)</string>
    <string name="konf_password_baru" translatable="false">Konfirmasi password baru (*)</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">About user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bank_soal" translatable="false">Bank soal</string>
    <string name="pertanyaan" translatable="false">Pertanyaan</string>
    <string name="jawaban" translatable="false">Jawaban</string>
    <string name="tryout" translatable="false">Try Out</string>
    <string name="akhiri_try_out" translatable="false">Akhiri Tryout</string>
    <string name="buka" translatable="false">Buka</string>
    <string name="pencarian_tidak_ditemukan" translatable="false">Pencarian tidak ditemukan</string>
    <string name="rekam_audio" translatable="false">Rekam audio</string>
    <string name="mulai_rekam_suara" translatable="false">Mulai rekam suara</string>
    <string name="rekam_suara_dihentikan" translatable="false">Rekaman suara dihentikan</string>
    <string name="putar_rekaman" translatable="false">Putar rekaman</string>
    <string name="rekam" translatable="false">Rekam</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="putar" translatable="false">Putar</string>
    <string name="semua" translatable="false">Semua</string>
    <string name="mulai" translatable="false">Mulai</string>
    <string name="selesai" translatable="false">Selesai</string>
    <string name="tryout_selesai" translatable="false">Tryout selesai</string>
    <string name="analisa_tryout" translatable="false">Analisa tryout</string>
    <string name="lihat_pembahasan" translatable="false">Lihat pembahasan</string>
    <string name="pembahasan" translatable="false">Pembahasan</string>
    <string name="analisa" translatable="false">Analisa</string>
    <string name="rincian_hasil" translatable="false">Rincian Hasil</string>
    <string name="analisa_grafik" translatable="false">Analisa Grafik</string>
    <string name="detail_analisa" translatable="false">Detail Analisa</string>
    <string name="grafik_progress_nilai" translatable="false">Grafik Progress Nilai</string>
    <string name="grafik_tes_potensi_skolastik" translatable="false">Grafik Tes Potensi Skolastik</string>
    <string name="grafik_tes_kemampuan_akademik_saintek" translatable="false">Grafik Tes Kemampuan Akademik Saintek</string>
    <string name="grafik_tes_kemampuan_akademik_soshum" translatable="false">Grafik Tes Kemampuan Akademik Soshum</string>
    <string name="leaderboard_first_try" translatable="false">Leaderboard First Try</string>
    <string name="leaderboard_askgram" translatable="false">Leaderboard askgram</string>
    <string name="leaderboard_global" translatable="false">Leaderboard global</string>
    <string name="saintek" translatable="false">Saintek</string>
    <string name="soshum" translatable="false">Soshum</string>
    <string name="kalahkan" translatable="false">Kalahkan</string>
    <string name="petunjuk" translatable="false">Petunjuk</string>
    <string name="petunjuk_1" translatable="false">Hanya menampilkan juara per set soal berdasarkan hasil try out pada percobaan pertama (sebelum pembahasan terbuka).</string>
    <string name="petunjuk_2" translatable="false">Menampilkan juara berdasarkan perolehan skor tertinggi dari masing-masing bidang (saintek dan soshum). TOP 3 Leaderboard global mendapatkan cash prize Rp. 300.000 untuk juara pertama, Rp.200.000 untuk juara kedua, dan Rp.100.000 untuk juara ketiga dengan periode seminggu setelah launching soal. Untuk info lebih lanjut klik disini.</string>
    <string name="petunjuk_3" translatable="false">Menampilkan juara berdasarkan jawaban TOP dengan like terbanyak di Askgram. Juara 1 mendapatkan Rp. 100.000 per bulannya.</string>
    <string name="saya_mengerti" translatable="false">Saya mengerti</string>
    <string name="video_training" translatable="true">Video training</string>

    <string name="fisika" translatable="false">Fisika</string>
    <string name="kimia" translatable="false">Kimia</string>
    <string name="biologi" translatable="false">Biologi</string>
    <string name="matematika" translatable="false">Matematika</string>
    <string name="bahasa_inggris" translatable="false">Bahasa Inggris</string>
    <string name="bahasa_indonesia" translatable="false">Bahasa Indonesia</string>
    <string name="matematika_ipa" translatable="false">Matematika IPA</string>
    <string name="sejarah_wajib" translatable="false">Sejarah wajib</string>
    <string name="post_baru" translatable="false">Post baru</string>

    <string name="menu_home">Home</string>
    <string name="menu_belajar" translatable="false">Belajar</string>
    <string name="menu_askgram" translatable="false">Askgram</string>
    <string name="menu_video_trial_soal" translatable="false">Video trial soal</string>
    <string name="menu_weekly_challenge" translatable="false">Weekly challenge</string>
    <string name="menu_tryout" translatable="false">Tryout</string>
    <string name="menu_konsultasi" translatable="false">Konsultasi</string>
    <string name="menu_leaderboard" translatable="false">Leaderboard</string>
    <string name="menu_akun" translatable="false">Akun</string>


    <string name="mata_pelajaran" translatable="false">Mata pelajaran</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigasi">Project Alpha</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_akun" translatable="false">Edit Akun</string>
    <string name="edit" translatable="false">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mockup_nama" translatable="false">Elizabeth Tasya</string>
    <string name="mockup_email" translatable="false">elizabeth@gmail.com</string>
    <string name="rencana_belajar" translatable="false">Rencana Belajar</string>
    <string name="materi_belajar" translatable="false">Materi Belajar</string>
    <string name="materi_utbk" translatable="false">Materi UTBK</string>


    <string-array name="sp_kelas">
        <item>X IPA</item>
        <item>XI IPA</item>
        <item>XII IPA</item>
        <item>X IPS</item>
        <item>XI IPS</item>
        <item>XII IPS</item>
    </string-array>
    <string name="title_activity_koor">KoorActivity</string>
    <string name="title_activity_detail_leaderboard">Leaderboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_leaderboard_global">LeaderboardGlobalActivity</string>

</resources>
