<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_belajar"
        android:name="com.example.alpha.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tryout"
        android:name="com.example.alpha.fragments.to.ToFragment"
        android:label="@string/menu_tryout"
        tools:layout="@layout/fragment_to" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.alpha.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_askgram"
        android:name="com.example.alpha.fragments.askgram.AskgramFragment"
        android:label="@string/menu_askgram"
        tools:layout="@layout/fragment_askgram" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.alpha.fragments.akun.AkunFragment"
        android:label="@string/menu_akun"
        tools:layout="@layout/fragment_akun" />


</navigation>