<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.leaderboard.petunjuk.PetunjukLeaderboardActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="@string/petunjuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"></View>
                <TextView
                    android:textStyle="bold"
                    android:text="@string/leaderboard_first_try"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>
                <TextView
                    android:text="@string/petunjuk_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>
                <TextView
                    android:textStyle="bold"
                    android:text="@string/leaderboard_global"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>
                <TextView
                    android:text="@string/petunjuk_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>
                <TextView
                    android:textStyle="bold"
                    android:text="@string/leaderboard_askgram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>
                <TextView
                    android:text="@string/petunjuk_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"></View>

                <Button
                    android:layout_gravity="end"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/rounded_opsi_orange_button"
                    android:text="@string/saya_mengerti"
                    android:id="@+id/btn_tutup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Button>

            </LinearLayout>

        </ScrollView>



    </androidx.cardview.widget.CardView>

</LinearLayout>