<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".activities.splash.SplashActivity">

    <LinearLayout
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="35dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <ImageView
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@mipmap/ic_ithb_putih"
            android:layout_width="200dp"
            android:layout_height="200dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


        <TextView

            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/ithb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>



</LinearLayout>