<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.akun.AkunFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_akun_putih"
                    android:layout_width="90dp"
                    android:layout_height="90dp">

                </ImageView>

                <TextView
                    android:id="@+id/tv_nama"
                    android:text="@string/mockup_nama"
                    android:textColor="@color/putih"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:id="@+id/tv_email"
                    android:text="@string/mockup_email"
                    android:textColor="@color/putih"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:layout_marginBottom="-40dp"
                    android:background="@color/putih"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="40dp">

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="170dp"
            android:layout_alignParentTop="true"
            android:background="@color/putih"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/carview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TableLayout
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:stretchColumns="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/kampus_impian"
                            android:padding="3dip" />


                        <TextView
                            android:text=": Institut ITB"
                            android:gravity="left"
                            android:padding="3dip" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/prodi_impian"
                            android:padding="3dip" />
                        <TextView
                            android:text=": Teknik Perminyakan"
                            android:gravity="left"
                            android:padding="3dip" />
                    </TableRow>


                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/sekolah"
                            android:padding="3dip" />
                        <TextView
                            android:text=": SMUN 1 Bandung"
                            android:gravity="left"
                            android:padding="3dip" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/kelas"
                            android:padding="3dip" />
                        <TextView
                            android:text=": XII A"
                            android:gravity="left"
                            android:padding="3dip" />
                    </TableRow>

                </TableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"></View>

                <Button
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/putih"
                    android:background="@drawable/rounded_blue_button"
                    android:id="@+id/btn_edit"
                    android:text="@string/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Button>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</FrameLayout>