<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:gravity="center_horizontal|center_vertical"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="20dp"
            android:background="@color/putih"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="20dp">

            <RelativeLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:textSize="20dp"
                    android:gravity="center_horizontal"
                    android:id="@+id/tv_login"
                    android:text="@string/password_baru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ScrollView
                    android:layout_above="@id/btn_login"
                    android:layout_below="@id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_marginTop="40dp"
                            android:text="@string/password_baru_ast"
                            android:id="@+id/tv_password_baru"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </TextView>

                        <EditText
                            style="@style/myEditText"
                            android:inputType="text"
                            android:id="@+id/et_password_baru"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </EditText>



                        <TextView
                            android:layout_marginTop="20dp"
                            android:text="@string/konf_password_baru"
                            android:id="@+id/tv_konf_password_baru"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </TextView>

                        <EditText
                            style="@style/myEditText"
                            android:id="@+id/et_konf_password_baru"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>


                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/lupa_password"
                                    android:id="@+id/tv_lupapassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                </TextView>

                            </LinearLayout>

                            <LinearLayout

                                android:orientation="vertical"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:textColor="@color/colorPrimary"
                                    android:textAlignment="textEnd"
                                    android:text="@string/kembali_ke_login"
                                    android:id="@+id/tv_kembali_login"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                </TextView>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>


                </ScrollView>



                <Button
                    android:id="@+id/btn_ok"
                    android:text="@string/ok"
                    android:textColor="@color/putih"
                    android:background="@drawable/rounded_blue_button"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Button>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>