<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.to.finish.FinishToActivity">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:text="Try Out SBMPTN Saintek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:text="Kode Soal A0001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/putih"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_to_finish"
                android:layout_width="160dp"
                android:layout_height="160dp">

            </ImageView>

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <TextView
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/putih"
                android:text="@string/tryout_selesai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>





            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"></View>

            <Button
                android:background="@drawable/rounded_white_button"
                android:id="@+id/btn_analisa"
                android:text="@string/analisa_tryout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:background="@drawable/rounded_white_button"
                android:id="@+id/btn_pembahasan"
                android:text="@string/lihat_pembahasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>